--- a/rdgenerator/templates/maintenance.html
+++ b/rdgenerator/templates/maintenance.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>RustDesk 客户端生成器</title>
+    <title>客户端生成器</title>
     <style>
         html, body {
             height: 100%;
