--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -372,28 +372,12 @@ rel="noopener noreferrer">点击此处查看可用的高级设置列表</a>
 <div class="platform">
 <div class="section" style="text-align: center;">
 <button type="submit" class="sponsor-button">
-<i class="fas fa-rocket"></i> 生成自定义客户端
+<i class="fas fa-rocket"></i> 开始构建
 </button>
 </div>
 </div>
 
-<div style="text-align: center; margin: 30px 0;">
-<a href="https://github.com/bryangerlach/rdgen"
-target="_blank"
-class="sponsor-button">
-<i class="fab fa-github"></i>
-查看 GitHub 源码
-</a>
-</div>
 
-<div style="text-align: center; margin: 30px 0;">
-<a href="https://github.com/sponsors/bryangerlach?o=esb"
-target="_blank"
-class="sponsor-button">
-<i class="fab fa-github"></i>
-赞助开发者
-</a>
-</div>
 
 </form>
 
