--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -355,6 +355,8 @@ color: #0095EA;
 <label for="{{ form.xOffline.id_for_label }}">{{ form.xOffline }} 在通讯录中为离线设备显示“X”标记</label><br>
 <label for="{{ form.removeNewVersionNotif.id_for_label }}">{{ form.removeNewVersionNotif }} 移除新版本通知</label><br>
 <label for="{{ form.hidePassword.id_for_label }}">{{ form.hidePassword }} 隐藏密码框</label><br>
+<label for="{{ form.hideMenuBar.id_for_label }}">{{ form.hideMenuBar }} 隐藏菜单</label><br>
+  
   
 </div>
 <div class="section">
