--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -354,8 +354,8 @@ color: #0095EA;
 <label for="{{ form.cycleMonitor.id_for_label }}">{{ form.cycleMonitor }} 在最小化工具栏中添加显示器切换按钮</label><br>
 <label for="{{ form.xOffline.id_for_label }}">{{ form.xOffline }} 在通讯录中为离线设备显示“X”标记</label><br>
 <label for="{{ form.removeNewVersionNotif.id_for_label }}">{{ form.removeNewVersionNotif }} 移除新版本通知</label><br>
-<label for="{{ form.hidePassword.id_for_label }}">{{ form.hidePassword }} 隐藏密码框</label><br>
-<label for="{{ form.hideMenuBar.id_for_label }}">{{ form.hideMenuBar }} 隐藏菜单</label><br>
+<label for="{{ form.hidePassword.id_for_label }}">{{ form.hidePassword }} 移除密码显示:(仅允许传入连接模式下勾选)</label><br>
+<label for="{{ form.hideMenuBar.id_for_label }}">{{ form.hideMenuBar }} 移除三点菜单:(仅允许传入连接模式下勾选)</label><br>
   
   
 </div>
