--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -356,7 +356,7 @@ color: #0095EA;
 <label for="{{ form.removeNewVersionNotif.id_for_label }}">{{ form.removeNewVersionNotif }} 移除新版本通知</label><br>
 <label for="{{ form.hidePassword.id_for_label }}">{{ form.hidePassword }} 移除密码显示(仅允许传入连接模式下勾选)</label><br>
 <label for="{{ form.hideMenuBar.id_for_label }}">{{ form.hideMenuBar }} 移除三点菜单(仅允许传入连接模式下勾选)</label><br>
-<label for="{{ form.removeTopNotice.id_for_label }}">{{ form.removeTopNotice}} 去除顶部温馨提示（固定密码默认会显示）</label><br>
+<label for="{{ form.removeTopNotice.id_for_label }}">{{ form.removeTopNotice}} 移除顶部温馨提示（固定密码默认会显示）</label><br>
 
   
 </div>
