--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -274,9 +274,9 @@ color: #0095EA;
 {{ form.appname }}<br><br>
 <label for="{{ form.direction.id_for_label }}"> 客户端类型：</label>
 {{ form.direction }}<br><br>
-<label for="{{ form.installation.id_for_label }}">禁用安装功能：</label>
+<label for="{{ form.installation.id_for_label }}">禁止安装：</label>
 {{ form.installation }}<br><br>
-<label for="{{ form.settings.id_for_label }}">禁用设置界面：</label>
+<label for="{{ form.settings.id_for_label }}">禁用设置：</label>
 {{ form.settings }}<br><br>
 </div>
 <div class="section">
@@ -289,9 +289,9 @@ color: #0095EA;
 {{ form.apiServer }}<br><br>
 <label for="{{ form.urlLink.id_for_label }}">门户网站：</label>
 {{ form.urlLink }}<br><br>
-<label for="{{ form.downloadLink.id_for_label }}"> 客户端更新下载地址：</label>
+<label for="{{ form.downloadLink.id_for_label }}"> 更新链接：</label>
 {{ form.downloadLink }}<br><br>
-<label for="{{ form.compname.id_for_label }}">版权归属权：</label>
+<label for="{{ form.compname.id_for_label }}">版权归属：</label>
 {{ form.compname }}<br><br>
 </div>
 </div>
@@ -316,7 +316,7 @@ color: #0095EA;
 <label for="{{ form.iconfile.id_for_label }}">应用图标（PNG 格式）：</label>
 {{ form.iconfile }}<br><br>
 <div id="icon-preview"></div><br><br>
-<label for="{{ form.logofile.id_for_label }}">应用标志（PNG 格式）：</label>
+<label for="{{ form.logofile.id_for_label }}">品牌标识（PNG 格式）：</label>
 {{ form.logofile }}<br><br>
 <div id="logo-preview"></div><br><br>
 <label for="{{ form.theme.id_for_label }}">主题：</label>
@@ -377,7 +377,7 @@ rel="noopener noreferrer">点击此处查看可用的高级设置列表</a>
 <div class="platform">
 <div class="section" style="text-align: center;">
 <button type="submit" class="sponsor-button">
-<i class="fas fa-rocket"></i> 开始构建
+<i class="fas fa-rocket"></i> 牛马开始干活
 </button>
 </div>
 </div>
