--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -351,9 +351,9 @@ color: #0095EA;
 </div><br>
 
 <h2><i class="fas fa-code"></i> 附加功能</h2>
-<label for="{{ form.cycleMonitor.id_for_label }}">{{ form.cycleMonitor }} 在最小化工具栏中添加显示器切换按钮</label><br>
-<label for="{{ form.xOffline.id_for_label }}">{{ form.xOffline }} 在通讯录中为离线设备显示“X”标记</label><br>
-<label for="{{ form.removeNewVersionNotif.id_for_label }}">{{ form.removeNewVersionNotif }} 移除新版本通知</label><br>
+<label for="{{ form.cycleMonitor.id_for_label }}">{{ form.cycleMonitor }} 会话顶部添加显示器切换按钮</label><br>
+<label for="{{ form.xOffline.id_for_label }}">{{ form.xOffline }} 在地址簿添加离线标记</label><br>
+<label for="{{ form.removeNewVersionNotif.id_for_label }}">{{ form.removeNewVersionNotif }} 移除安装更新提示</label><br>
 <label for="{{ form.hidePassword.id_for_label }}">{{ form.hidePassword }} 移除密码显示(仅允许传入连接模式下勾选)</label><br>
 <label for="{{ form.hideMenuBar.id_for_label }}">{{ form.hideMenuBar }} 移除三点菜单(仅允许传入连接模式下勾选)</label><br>
 <label for="{{ form.removeTopNotice.id_for_label }}">{{ form.removeTopNotice}} 移除顶部温馨提示（固定密码默认会显示）</label><br>
