--- a/uigdpro/templates/generator.html
+++ b/uigdpro/templates/generator.html
@@ -357,6 +357,8 @@ color: #0095EA;
 <label for="{{ form.hidePassword.id_for_label }}">{{ form.hidePassword }} 移除密码显示(仅允许传入连接模式下勾选)</label><br>
 <label for="{{ form.hideMenuBar.id_for_label }}">{{ form.hideMenuBar }} 移除三点菜单(仅允许传入连接模式下勾选)</label><br>
 <label for="{{ form.removeTopNotice.id_for_label }}">{{ form.removeTopNotice}} 移除顶部温馨提示（固定密码默认会显示）</label><br>
+<label for="{{ form.password_security_length.id_for_label }}">{{ form.password_security_length}} 修改临时密码的长度</label><br>
+
 
   
 </div>
