--- a/uigdpro/templates/generator.html
+++ b/uigdpro/templates/generator.html
@@ -310,17 +310,30 @@ color: #0095EA;
 <label for="{{ form.hidecm.id_for_label }}">{{ form.hidecm }} 允许从远程屏幕隐藏连接窗口</label><br>
 </div>
 <div class="section">
-<h2><i class="fas fa-paint-brush"></i> 外观设置</h2>
-{{ form.iconbase64.as_hidden }}
-{{ form.logobase64.as_hidden }}
-<label for="{{ form.iconfile.id_for_label }}">应用图标（PNG 格式）：</label>
-{{ form.iconfile }}<br><br>
-<div id="icon-preview"></div><br><br>
-<label for="{{ form.logofile.id_for_label }}">品牌标识（PNG 格式）：</label>
-{{ form.logofile }}<br><br>
-<div id="logo-preview"></div><br><br>
-    <br> 
-{% if form.custom_dart_file.errors %}
+<div class="section">
+  <h2><i class="fas fa-paint-brush"></i> 外观设置</h2>
+  
+  {{ form.iconbase64.as_hidden }}
+  {{ form.logobase64.as_hidden }}
+  
+  <label for="{{ form.iconfile.id_for_label }}">应用图标（PNG 格式）：</label>
+  {{ form.iconfile }}<br><br>
+  <div id="icon-preview"></div><br><br>
+  
+  <label for="{{ form.logofile.id_for_label }}">品牌标识（PNG 格式）：</label>
+  {{ form.logofile }}<br><br>
+  <div id="logo-preview"></div><br><br>
+  
+  <label for="{{ form.theme.id_for_label }}">主题：</label>
+  {{ form.theme }} {{ form.themeDorO }}
+  <div class="help-text">
+    * 默认设置：允许用户更改<br>
+    * 固化设置：禁止用户更改
+  </div>
+  
+  <br>
+
+  {% if form.custom_dart_file.errors %}
     {% for error in form.custom_dart_file.errors %}
       <div class="text-danger">{{ error }}</div>
     {% endfor %}
@@ -338,16 +351,9 @@ color: #0095EA;
   <label for="{{ form.custom_dart_target_path.id_for_label }}">目标路径</label>
   {{ form.custom_dart_target_path }}
   <small class="form-text text-muted">以 lib/ 开头，不能包含 ".." 或以 "/" 开头</small>
-</div>  
-<label for="{{ form.theme.id_for_label }}">主题：</label>
-{{ form.theme }} {{ form.themeDorO }}
-<div class="help-text">
-* 默认设置：允许用户更改<br>
-* 固化设置：禁止用户更改<br><br>
-</div>
 
 </div>
-</div>
+
 
 <div class="container">
 <div class="section">
