--- a/uigdpro/templates/generator.html
+++ b/uigdpro/templates/generator.html
@@ -309,6 +309,7 @@ color: #0095EA;
 <label for="{{ form.autoClose.id_for_label }}">{{ form.autoClose }} 用户无操作时自动关闭传入会话</label><br>
 <label for="{{ form.hidecm.id_for_label }}">{{ form.hidecm }} 允许从远程屏幕隐藏连接窗口</label><br>
 </div>
+
 <div class="section">
 <h2><i class="fas fa-paint-brush"></i> 外观设置</h2>
 {{ form.iconbase64.as_hidden }}
@@ -319,33 +320,31 @@ color: #0095EA;
 <label for="{{ form.logofile.id_for_label }}">品牌标识（PNG 格式）：</label>
 {{ form.logofile }}<br><br>
 <div id="logo-preview"></div><br><br>
-    <br> 
-{% if form.custom_dart_file.errors %}
-    {% for error in form.custom_dart_file.errors %}
-      <div class="text-danger">{{ error }}</div>
-    {% endfor %}
-  {% endif %}
-  <label for="{{ form.custom_dart_file.id_for_label }}">自定义模板(可选）</label>
-  {{ form.custom_dart_file }}
-  <small class="form-text text-muted">仅支持 .dart 文件</small>
-  <br><br>
+<div class="form-group">
+    {% if form.custom_dart_file.errors %}
+      {% for error in form.custom_dart_file.errors %}
+        <div class="text-danger">{{ error }}</div>
+      {% endfor %}
+    {% endif %}
+    <label for="{{ form.custom_dart_file.id_for_label }}">自定义模板（可选）</label>
+    {{ form.custom_dart_file }}
+  </div>
 
-  {% if form.custom_dart_target_path.errors %}
-    {% for error in form.custom_dart_target_path.errors %}
-      <div class="text-danger">{{ error }}</div>
-    {% endfor %}
-  {% endif %}
-  <label for="{{ form.custom_dart_target_path.id_for_label }}">目标路径</label>
-  {{ form.custom_dart_target_path }}
-  <small class="form-text text-muted">以 lib/ 开头，不能包含 ".." 或以 "/" 开头</small>
-</div>  
+  <div class="form-group">
+    {% if form.custom_dart_target_path.errors %}
+      {% for error in form.custom_dart_target_path.errors %}
+        <div class="text-danger">{{ error }}</div>
+      {% endfor %}
+    {% endif %}
+    <label for="{{ form.custom_dart_target_path.id_for_label }}">目标路径</label>
+    {{ form.custom_dart_target_path }}
+  </div>
 <label for="{{ form.theme.id_for_label }}">主题：</label>
 {{ form.theme }} {{ form.themeDorO }}
 <div class="help-text">
 * 默认设置：允许用户更改<br>
 * 固化设置：禁止用户更改<br><br>
 </div>
-
 </div>
 </div>
 
