--- a/uigdpro/templates/generator.html
+++ b/uigdpro/templates/generator.html
@@ -370,6 +370,7 @@ color: #0095EA;
 <label for="{{ form.enableCamera.id_for_label }}">{{ form.enableCamera }} 启用远程摄像头</label>
 <label for="{{ form.enableTerminal.id_for_label }}">{{ form.enableTerminal }} 启用远程终端</label>
 </div><br>
+  </div>  
 <div class="section">
 <h2><i class="fas fa-code"></i> 附加功能</h2>
 <label for="{{ form.cycleMonitor.id_for_label }}">{{ form.cycleMonitor }} 会话顶部添加显示器切换按钮</label><br>
