--- a/uigdpro/templates/generator.html
+++ b/uigdpro/templates/generator.html
@@ -383,6 +383,7 @@ rel="noopener noreferrer">点击此处查看可用的高级设置列表</a>
 <label for="{{ form.overrideManual.id_for_label }}">固化设置（用户不可修改）</label><br>
 {{ form.overrideManual }}<br><br>
 </div>
+</div>
 </div>  
 <div class="section">
 <h2><i class="fas fa-code"></i> 附加功能</h2>
