--- a/uigdpro/templates/generator.html
+++ b/uigdpro/templates/generator.html
@@ -266,6 +266,7 @@ color: #0095EA;
 </div>
 
 <div class="container">
+ <div class="section">
 <h2><i class="fas fa-sliders-h"></i> 通用设置</h2>
 <label for="{{ form.exename.id_for_label }}">配置名称（仅限英文字符，不可包含空格或特殊符号）：</label>
 {{ form.exename }}<span id="filenameError" class="error"></span><br><br>
@@ -279,7 +280,7 @@ color: #0095EA;
 {{ form.settings }}<br><br>
 </div>
  
-<div class="container">
+<div class="section">
 <h2><i class="fas fa-server"></i> 服务器配置 </h2>
 <label for="{{ form.serverIP.id_for_label }}">服务器地址 (Host)：</label>
 {{ form.serverIP }}<br><br>
@@ -296,6 +297,7 @@ color: #0095EA;
 </div><br>
 
 <div class="container">
+ <div class="section">
 <h2><i class="fas fa-shield-alt"></i> 安全设置</h2>
 <label for="{{ form.passApproveMode.id_for_label }}">认证方式：</label>
 {{ form.passApproveMode }}<br><br>
@@ -308,7 +310,7 @@ color: #0095EA;
 <label for="{{ form.hidecm.id_for_label }}">{{ form.hidecm }} 允许从远程屏幕隐藏连接窗口</label><br>
 </div>
 
-<div class="container">
+<div class="section">
 <h2><i class="fas fa-paint-brush"></i> 外观设置</h2>
 {{ form.iconbase64.as_hidden }}
 {{ form.logobase64.as_hidden }}
@@ -369,7 +371,7 @@ color: #0095EA;
 <label for="{{ form.enableTerminal.id_for_label }}">{{ form.enableTerminal }} 启用远程终端</label>
 </div><br>
 
-<div class="container">
+<div class="section">
 <h2><i class="fas fa-cog"></i> 高级设置</h2>
 <label for="{{ form.removeWallpaper.id_for_label }}">{{ form.removeWallpaper }} 远程会话期间移除桌面壁纸</label><br>
 <a href="https://rustdesk.com/docs/en/self-host/client-configuration/advanced-settings/"
@@ -381,8 +383,8 @@ rel="noopener noreferrer">点击此处查看可用的高级设置列表</a>
 {{ form.overrideManual }}<br><br>
 </div>
 <br>
-
 <div class="container">
+<div class="section">
 <h2><i class="fas fa-code"></i> 附加功能</h2>
 <label for="{{ form.cycleMonitor.id_for_label }}">{{ form.cycleMonitor }} 会话顶部添加显示器切换按钮</label><br>
 <label for="{{ form.xOffline.id_for_label }}">{{ form.xOffline }} 在地址簿添加离线标记</label><br>
