--- a/uigdpro/templates/generator.html
+++ b/uigdpro/templates/generator.html
@@ -277,7 +277,7 @@ color: #0095EA;
 <label for="{{ form.installation.id_for_label }}">禁止安装：</label>
 {{ form.installation }}<br><br>
 <label for="{{ form.settings.id_for_label }}">禁用设置：</label>
-{{ form.settings }}
+{{ form.settings }}<br><br>
 </div>
  
 <div class="section">
@@ -293,12 +293,11 @@ color: #0095EA;
 <label for="{{ form.downloadLink.id_for_label }}"> 更新链接：</label>
 {{ form.downloadLink }}<br><br>
 <label for="{{ form.compname.id_for_label }}">版权归属：</label>
-{{ form.compname }}
+{{ form.compname }}<br><br>
 </div>
+ </div>
 
 <div class="container">
-<div class="row">
-<div class="col-md-6">
 <div class="section">
 <h2><i class="fas fa-shield-alt"></i> 安全设置</h2>
 <label for="{{ form.passApproveMode.id_for_label }}">认证方式：</label>
@@ -312,7 +311,6 @@ color: #0095EA;
 <label for="{{ form.hidecm.id_for_label }}">{{ form.hidecm }} 允许从远程屏幕隐藏连接窗口</label><br>
 </div>
 
-<div class="col-md-6">
 <div class="section">
 <h2><i class="fas fa-paint-brush"></i> 外观设置</h2>
 {{ form.iconbase64.as_hidden }}
@@ -385,8 +383,9 @@ rel="noopener noreferrer">点击此处查看可用的高级设置列表</a>
 <label for="{{ form.overrideManual.id_for_label }}">固化设置（用户不可修改）</label><br>
 {{ form.overrideManual }}<br><br>
 </div>
-<br>
-<div class="container">
+</div>
+
+ <div class="container">
 <div class="section">
 <h2><i class="fas fa-code"></i> 附加功能</h2>
 <label for="{{ form.cycleMonitor.id_for_label }}">{{ form.cycleMonitor }} 会话顶部添加显示器切换按钮</label><br>
@@ -396,7 +395,8 @@ rel="noopener noreferrer">点击此处查看可用的高级设置列表</a>
 <label for="{{ form.hideMenuBar.id_for_label }}">{{ form.hideMenuBar }} 移除三点菜单(仅允许传入连接模式下勾选)</label><br>
 <label for="{{ form.removeTopNotice.id_for_label }}">{{ form.removeTopNotice}} 移除顶部温馨提示（固定密码默认会显示）</label><br>
 <label for="{{ form.password_security_length.id_for_label }}">{{ form.password_security_length}} 修改临时密码的长度</label><br>
-</div><br>
+</div>
+</div>
 
 <!-- 底部按钮 -->
 <div class="platform">
